Create Spookometer with some dummy numbers for testing

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,16 @@ body {
 .header {
   margin: 40px auto; }
 
+.spookometer {
+  height: 100px;
+  width: 400px;
+  margin: 0 auto; }
+  .spookometer__inner {
+    height: 100px;
+    width: 400px;
+    background-image: url("../assets/spookometer.png");
+    background-size: auto 100px; }
+
 .form {
   margin: 20px auto; }
 
