--- a/scss/style.scss
+++ b/scss/style.scss
@@ -31,7 +31,8 @@ body {
 		height: 100px;
 		width: 400px;
 		background-image: url('../assets/spookometer.png');
-		background-size: auto 100px;
+		background-size: 400px auto;
+		background-repeat: no-repeat;
 	}
 }
 
