--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,21 @@
+@keyframes hover1 {
+  0% {
+    margin-top: 0; }
+  50% {
+    margin-top: 10px;
+    margin-left: 10px; }
+  100% {
+    margin-top: 0;
+    margin-left: 0; } }
+@keyframes hover2 {
+  0% {
+    margin-top: 0; }
+  50% {
+    margin-top: 15px;
+    margin-right: 10px; }
+  100% {
+    margin-top: 0;
+    margin-left: 0; } }
 * {
   padding: 0;
   margin: 0; }
@@ -36,14 +54,16 @@ body {
     left: 10px;
     opacity: 0.4;
     width: 486px;
-    height: 228px; }
+    height: 228px;
+    animation: hover1 5s infinite; }
   .mist.mist2 {
     background-image: url("../assets/mist2.png");
     top: 200px;
     right: 0px;
     opacity: 0.2;
     width: 571px;
-    height: 336px; }
+    height: 336px;
+    animation: hover2 3s infinite; }
 
 .form {
   margin: 20px auto; }
