--- a/scss/style.scss
+++ b/scss/style.scss
@@ -55,9 +55,8 @@ body {
 }
 
 .spookometer {
-	height: 100px;
 	width: 400px;
-	margin: 0 auto;
+	margin: 40px auto;
 
 	&__inner {
 		height: 100px;
