--- a/scss/style.scss
+++ b/scss/style.scss
@@ -64,6 +64,10 @@ body {
 		background-image: url('../assets/spookometer.png');
 		background-size: 400px auto;
 		background-repeat: no-repeat;
+
+		&.hide {
+			opacity: 0;
+		}
 	}
 }
 
