--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,8 @@ body {
   height: 400px;
   width: 400px;
   position: fixed;
-  background-repeat: no-repeat; }
+  background-repeat: no-repeat;
+  z-index: -1000; }
   .mist.mist1 {
     background-image: url("../assets/mist1.png");
     top: 20px;
