--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+@font-face {
+  font-family: 'Xfiles';
+  src: url("../x-files.ttf") format("truetype"); }
 @keyframes hover1 {
   0% {
     margin-top: 0; }
@@ -22,7 +25,8 @@
 
 body {
   background-color: #252525;
-  color: #dedede; }
+  color: #dedede;
+  font-family: 'Xfiles'; }
 
 .container {
   margin: 0 auto;
