--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,8 @@
+@font-face {
+	font-family: 'Xfiles';
+	src: url('../x-files.ttf') format('truetype');
+}
+
 @keyframes hover1 {
 	0% {
 		margin-top: 0;
@@ -42,6 +47,7 @@ $fg: #dedede;
 body {
 	background-color: $bg;
 	color: $fg;
+	font-family: 'Xfiles';
 }
 
 .container {
