--- a/scss/style.scss
+++ b/scss/style.scss
@@ -69,7 +69,7 @@ body {
 		width: 400px;
 		background-image: url('../assets/spookometer.png');
 		background-size: 400px auto;
-		background-repeat: repeat-y;
+		background-repeat: repeat-x;
 		opacity: 1;
 		transition: opacity 2s ease-in-out;
 
