add spook multiplier

--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,7 @@ body {
 
 .result {
   display: block;
-  margin: 40px; }
+  margin: 40px; 
+  font-size: 30px;}
 
 /*# sourceMappingURL=style.css.map */
